--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,8 @@
 machine:
   node:
     version: 4.2.3
+test:
+  override:
+    - mkdir -p $CIRCLE_TEST_REPORT/mocha
+    - MOCHA_FILE=$CIRCLE_TEST_REPORT/mocha/junit.xml node_modules/.bin/mocha test --reporter mocha-junit-reporter
 
