--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,6 @@ machine:
     version: 4.2.3
 test:
   override:
-    - mkdir -p $CIRCLE_TEST_REPORT/mocha
-    - MOCHA_FILE=$CIRCLE_TEST_REPORT/mocha/junit.xml node_modules/.bin/mocha test --reporter mocha-junit-reporter
-
+    - mocha test --reporter mocha-junit-reporter:
+      environment:
+        MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
