--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,5 @@ machine:
     version: 4.2.3
 test:
   override:
-    - node_modules/.bin/mocha test --reporter mocha-junit-reporter:
-      environment:
-        MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
+    - mkdir -p $CIRCLE_TEST_REPORTS/mocha
+    - MOCHA_FILE=$CIRCLE_TEST_REPORTS/mocha/junit.xml node_modules/.bin/mocha test --reporter mocha-junit-reporter
